--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "voicyou/carousel",
-  "description": "This is a Magento 2 Module for printing all your products that are present inside your cart into a pdf file.",
+  "description": "This is a Magento 2 Module creating the bootstrap carousel in the Magento 2 store.",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
     "voicyou/menuoptions":"~1.0.0"
